# champion

./: .dockerignore  .gitignore  .markdownlintrc.json  .pre-commit-config.yaml  API_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_TRANSFORMATION.md  AUTHENTICATION_REFACTORING.md  CLICKHOUSE_ENV_CONFIG.md  CLICKHOUSE_SUMMARY.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_REFERENCE.md  CLI_STRUCTURE.txt  CLI_VALIDATION_REPORT.md  CLI_VERIFICATION_REPORT.md  CONTAINERIZATION_QUICKSTART.md  CONTAINERIZATION_STATUS.txt  CONTAINERIZATION_SUMMARY.md  Dockerfile  EQUITY_FLOWS_INTEGRATION.md  EXECUTION_SUMMARY.txt  EXECUTIVE_SUMMARY.md  FEATURES_IMPLEMENTATION_SUMMARY.md  FUNDAMENTALS_README.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  LOCAL_SETUP_STATUS.md  MIGRATION_STATUS.md  ML_IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_STEPS.md  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  PHASE_2_ANALYSIS.md  POLARS_PARSER_IMPLEMENTATION_SUMMARY.md  PREFECT_ORCHESTRATION_SUMMARY.md  PROGRESS_IMPLEMENTATION.md  PROMETHEUS_METRICS_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  README_CODE_REVIEW.md  (+18 more)
.github/agents/: backend-architect.agent.md  database-engineer.agent.md  observability-engineer.agent.md  python-dev.agent.md
.github/workflows/: bootstrap-issues.yml  ci.yml  docker.yml  markdownlint.yml
data/: MOSPI_Macro_20251013_20260111.json  NSE_TradingCalendar_2026.json  RBI_Macro_20251013_20260111.json
docs/: ARCHITECTURE.md  CODE_QUALITY_QUICK_REFERENCE.md  DEPLOYMENT.md  EPIC_CODE_QUALITY_STATUS.md  EPIC_COMPLETION_SUMMARY.md  IDEMPOTENCY.md  LOG_AGGREGATION_SETUP.md  MACRO_DATA.md  MIGRATION.md  MONITORING_USAGE_GUIDE.md  README.md  SCHEMA_VERSIONING.md  markdown-linting.md  vision.md
docs/00_getting_started/: README.md
docs/01_architecture/: README.md  data_flow.md  domain_boundaries.md  observability.md  security.md  vision_and_principles.md
docs/02_implementation/: README.md  bulk-block-deals.md  (+10 more)
examples/: circuit_breaker_demo.py  index_constituent_manual_test.py  macro_correlation_analysis.py
ingestion/nse-scraper/: .env.example  .gitignore  BULK_BLOCK_DEALS_QUICKSTART.md  Dockerfile  INDEX.md  METRICS.md  PREFECT_IMPLEMENTATION_COMPLETE.md  PREFECT_QUICK_REFERENCE.txt  PREFECT_SETUP_SUMMARY.md  PRODUCTION_READINESS.py  README.md  TEST_REPORT.md  check_status.sh  coverage.xml  debug_bulk_api.py  docker-compose.yml  entrypoint.sh  grafana_dashboard.json  mypy.ini  prefect_dashboard.py  pyproject.toml  run_bulk_block_deals.py  run_combined_etl.py  run_date_range.py  run_demo_etl.py  run_etl.py  run_local_files.py  run_scraper.py  run_simple_etl.py  run_stack.py  run_symbol_enrichment.py  run_trading_calendar.py  test_all_scrapers.py  test_bulk_block.py  test_bulk_block_updated.py  test_option_chain.py  test_pipeline.py  test_scraper.py  test_symbol_master.py  verify_bulk_block_deals.py
ingestion/nse-scraper/docs/: BSE_INTEGRATION.md  OPTION_CHAIN_SCRAPER.md  TRADING_CALENDAR.md  symbol-master-enrichment-quickstart.md
ingestion/nse-scraper/examples/: run_prefect_deployment.py
ingestion/nse-scraper/scripts/: identify_bse_only_symbols.py
ingestion/nse-scraper/src/: config.py  main.py
ingestion/nse-scraper/src/models/: __init__.py  events.py  schemas.py
ingestion/nse-scraper/src/orchestration/: README.md  __init__.py  bulk_block_deals_flow.py  combined_flows.py  flows.py  macro_flow.py  trading_calendar_flow.py
ingestion/nse-scraper/src/parsers/: POLARS_PARSER_README.md  bhavcopy_parser.py  bulk_block_deals_parser.py  ca_parser.py  index_constituent_parser.py  macro_indicator_parser.py  polars_bhavcopy_parser.py  polars_bse_parser.py  quarterly_financials_parser.py  shareholding_parser.py  symbol_enrichment.py  symbol_master_parser.py  trading_calendar_parser.py
ingestion/nse-scraper/src/producers/: __init__.py  avro_producer.py
ingestion/nse-scraper/src/scrapers/: base.py  bhavcopy.py  bse_bhavcopy.py  bse_shareholding.py  bulk_block_deals.py  corporate_actions.py  index_constituent.py  mca_financials.py  mospi_macro.py  option_chain.py  rbi_macro.py  symbol_master.py  trading_calendar.py
ingestion/nse-scraper/src/tasks/: bhavcopy_tasks.py  bse_tasks.py  bulk_block_deals_tasks.py  index_constituent_tasks.py  macro_tasks.py  option_chain_tasks.py  trading_calendar_tasks.py
ingestion/nse-scraper/src/utils/: generate_fundamentals_sample.py  logger.py  metrics.py  retry.py  trading_calendar.py
ingestion/nse-scraper/tests/: README.md  __init__.py
ingestion/nse-scraper/tests/integration/: __init__.py  test_flows.py  test_macro_etl.py  test_symbol_enrichment.py
ingestion/nse-scraper/tests/manual/: __init__.py  benchmark_parsers.py  show_parsed_event.py  test_all_endpoints.py  test_flow_manual.py  test_macro_manual.py  test_metrics_server.py  test_pipeline_metrics.py  test_prefect_tasks.py  test_trading_calendar.py
ingestion/nse-scraper/tests/unit/: __init__.py  test_bse_parser.py  test_bse_scraper.py  test_bulk_block_deals_parser.py  test_fundamentals.py  test_index_constituent_parser.py  test_option_chain.py  test_polars_bhavcopy_parser.py  test_symbol_master_parser.py
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml
monitoring/: README.md  alert_rules.yml  prometheus.yml
schemas/: README.md
scripts/: analytics.py  backfill_corporate_actions.py  cleanup_partitions.py  create_issues.sh  dev_setup.sh  download_bhavcopy.py  init_demo_user.py  preflight_check.py  verify_containerization.sh
src/storage/: README.md  __init__.py  parquet_io.py  pyproject.toml  retention.py
src/storage/tests/: test_parquet_io.py  test_retention.py
tests/: conftest.py
validation/: .coverage  .gitignore  README.md  demo.py  pyproject.toml
validation/quarantine/: normalized_equity_ohlc_failures.parquet  raw_equity_ohlc_failures.parquet
validation/sample_data/: generate_samples.py  normalized_equity_ohlc_valid.parquet  normalized_equity_ohlc_with_errors.parquet  raw_equity_ohlc_valid.parquet  raw_equity_ohlc_with_errors.parquet
validation/src/validation/: validator.py
warehouse/: IMPLEMENTATION.md  README.md  TESTING.md
(+253 files in other folders)
