[tool.poetry]
name = "validation"
version = "0.1.0"
description = "Data validation utilities for Parquet datasets"
authors = ["Champion Team <team@champion.com>"]
readme = "README.md"
packages = [{include = "validation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Data Processing
polars = "^0.20.0"
pyarrow = "^15.0.0"

# Validation
jsonschema = "^4.20.0"

# Workflow
prefect = "^2.14.0"

# Logging
structlog = "^24.1.0"

# Utilities
python-dateutil = "^2.8.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Code Quality
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=validation --cov-report=term-missing"
