[tool.poetry]
name = "nse-scraper"
version = "0.1.0"
description = "Production-grade NSE data scraper with Kafka integration"
authors = ["Champion Team <team@champion.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Kafka & Avro
confluent-kafka = {extras = ["avro"], version = "^2.3.0"}
fastavro = "^1.9.0"

# HTTP & Scraping
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"

# Data Processing
pandas = "^2.1.0"
numpy = "^1.26.0"
polars = "^0.20.0"
pyarrow = "^15.0.0"

# Configuration & Environment
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

# Logging & Observability
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"

# Retry & Resilience
tenacity = "^8.2.0"

# CLI
typer = {extras = ["all"], version = "^0.9.0"}

# Date/Time
python-dateutil = "^2.8.0"

# Validation
cerberus = "^1.3.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.0"

# Code Quality
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

# Type Stubs
types-python-dateutil = "^2.8.0"
pandas-stubs = "^2.1.0"

[tool.poetry.scripts]
nse-scraper = "src.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = false
# TODO: Gradually tighten these settings as code quality improves

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
