[tool.poetry]
name = "storage"
version = "0.1.0"
description = "Storage utilities for Parquet lake management"
authors = ["Champion Team <team@champion.com>"]
readme = "README.md"
packages = [{include = "storage", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
# Data Processing
polars = "^0.20.0"
pyarrow = "^15.0.0"

# Logging
structlog = "^24.1.0"

# Utilities
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Code Quality
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=storage --cov-report=term-missing"
